RESOLVED FIXED94890
REGRESSION(r126132): thumb doesn't match click position for rtl input type=range
https://bugs.webkit.org/show_bug.cgi?id=94890
Summary REGRESSION(r126132): thumb doesn't match click position for rtl input type=range
Keishi Hattori
Reported 2012-08-23 19:27:53 PDT
r126132 broke it
Attachments
Patch (5.76 KB, patch)
2012-08-23 20:48 PDT, Keishi Hattori
no flags
Patch (7.51 KB, patch)
2012-08-23 21:04 PDT, Keishi Hattori
no flags
Keishi Hattori
Comment 1 2012-08-23 20:48:04 PDT
Kent Tamura
Comment 2 2012-08-23 20:55:28 PDT
Comment on attachment 160314 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=160314&action=review > Source/WebCore/ChangeLog:3 > + thumb doesn't match click position for rtl input type=range Please follow our notation for a regression bug. REGRESSION(revision): description > Source/WebCore/html/shadow/SliderThumbElement.cpp:279 > + if (!renderBox()->style()->isLeftToRightDirection()) "renderBox()->style()->isLeftToRightDirection()" appears three times in this function. We had better holding it in a local variable.
Keishi Hattori
Comment 3 2012-08-23 21:04:53 PDT
Kent Tamura
Comment 4 2012-08-23 21:09:43 PDT
Comment on attachment 160320 [details] Patch ok
WebKit Review Bot
Comment 5 2012-08-23 21:55:15 PDT
Comment on attachment 160320 [details] Patch Clearing flags on attachment: 160320 Committed r126539: <http://trac.webkit.org/changeset/126539>
WebKit Review Bot
Comment 6 2012-08-23 21:55:18 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.