REGRESSION(r126132): thumb doesn't match click position for rtl input type=range https://bugs.webkit.org/show_bug.cgi?id=94890

Reviewed by Kent Tamura.

Source/WebCore:

r126132 broke rtl input type=range so the thumb doesn't match click position.

Added new tests to range-hit-test-with-padding.html.

* html/shadow/SliderThumbElement.cpp:
(WebCore::SliderThumbElement::setPositionFromPoint):

LayoutTests:

* fast/forms/range/range-hit-test-with-padding-expected.txt:
* fast/forms/range/range-hit-test-with-padding.html:


Canonical link: https://commits.webkit.org/112758@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126539 268f45cc-cd09-0410-ab3c-d52691b4dbfc